sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: value =+ is not a member of Int
      case WHITE=> cntw=+1
                       ^